# BenLib

./: ..clang-format.kate-swp  .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  Makefile  README.md  appveyor.yml  build_docker.sh  clean.sh  coverage.sh  cpack.sh  export.sh  gource.sh  make.sh  nvvp.sh  package.txt  run_docker.sh  scan-build.sh  valgrind.sh
.devcontainer/: .env  DockerImages.mk  Dockerfile  Makefile  devcontainer.json  docker-compose.yaml  docker-compose.yml
.github/: FUNDING.yml
cmake/: ConfigureBoost.cmake  (+21 more)
example/: CMakeLists.txt  basic_anti_cheat.cpp  basic_async.cpp  basic_fast_example.cpp  beacons.cpp  bench_example.cpp  debug_example.cpp  patern_repository.cpp  pattern_repository.cpp  raylib_test.cpp  request_exemple.cpp  task_exemple.cpp
lib/C/display/: CMakeLists.txt  my_putchar.c  my_putchar.h  my_putstr.c  my_putstr.h
lib/C/integer/: CMakeLists.txt  my_compute_power_rec.c  my_compute_power_rec.h  my_compute_square_root.c  my_compute_square_root.h  my_count_spe_char.c  my_count_spe_char.h  my_is_prime.c  my_is_prime.h  my_sort_int_array.c  my_sort_int_array.h  my_swap.c  my_swap.h
lib/C/libhello/: CMakeLists.txt  hello.c  hello.h
lib/C/pointer/: CMakeLists.txt  my_inv_two_str_pt.c  my_inv_two_str_pt.h  my_revstr_pt.c  my_revstr_pt.h  my_strcpy_ptr.c  my_strcpy_ptr.h
lib/C/string/: CMakeLists.txt  my_strcpy.c  my_strcpy.h  my_strdup.c  my_strdup.h  my_strlen.c  my_strlen.h  my_strllen.c  my_strllen.h  revstr.c  revstr.h
lib/C/string_c/: CMakeLists.txt  my_revstr.c  my_revstr.h  my_strcpy.c  my_strcpy.h  my_strlen.h  my_strllen.c  my_strllen.h
lib/C/string_is/: CMakeLists.txt  my_isnum.c  my_isnum.h  my_str_isalpha.c  my_str_isalpha.h  my_str_islower.c  my_str_islower.h  my_str_isnum.c  my_str_isnum.h  my_str_isprintable.c  my_str_isprintable.h  my_str_isupper.c  my_str_isupper.h
lib/CUDA/: CMakeLists.txt  main.c  vec1d.c  vec2d_add.c  vec2d_mult.c  vec2d_mult.cpp  vec2d_mult3.cpp  vec3d_mult.cpp  vec3d_mult2.cpp
lib/CUDA/kernel/: crc.cu  crc.cuh  crc.h  crc.hpp  cuda_utils.cpp  cuda_utils.h  cuda_utils.hpp  kernel.cu  kernel.cuh  kernel.h  kernel.hpp  matrix.cu  matrix.cuh  matrix.h  matrix.hpp  matrix.tpp  matrix_ops.hpp  matrix_ops.tpp
lib/arduino/: CMakeLists.txt  arduino_compatibility.hpp  arduino_io.cpp  arduino_io.hpp  arduino_serial.cpp  arduino_serial.hpp  arduino_time.cpp  arduino_time.hpp
lib/arduino/led/: blink_number.c  blink_number.cpp  blink_number.h  blink_number.hpp
lib/arduino/lib/: arduino_io.cpp  arduino_io.hpp  arduino_is.cpp  arduino_is.hpp  arduino_math.cpp  arduino_math.hpp  arduino_serial.cpp  arduino_serial.hpp  arduino_string.cpp  arduino_string.hpp  arduino_time.cpp  arduino_time.hpp  arduino_type.hpp
lib/arduino/reboot/: reboot_software.c  reboot_software.cpp  reboot_software.h  reboot_software.hpp
lib/arduino/tests/: For_Loop_Iteration.ino  basic.cpp  basic.ino  main_arduino.cpp
lib/arduino/tests/Communication/: ASCIITable.ino
lib/arduino/tests/Control_Structures/: Arrays.ino  SwitchCase2.ino  WhileStatementConditional.ino
lib/arduino/tests/Strings/: CharacterAnalysis.ino  StringAdditionOperator.ino  StringComparisonOperators.ino
lib/arduino/usefull/: arduino_type.c  arduino_type.cpp  arduino_type.h  arduino_type.hpp  free_ram.c  free_ram.cpp  free_ram.h  free_ram.hpp  voltage.c  voltage.cpp  voltage.h  voltage.hpp
lib/convert_utils/: CMakeLists.txt  binary.cpp  binary.hpp  binary_imp.hpp  qt_utils.cpp  qt_utils.hpp  sfml_utils.cpp  sfml_utils.hpp
lib/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp
lib/crypto/: CMakeLists.txt  crypto.cpp  crypto.hpp  crypto_AES.cpp  crypto_AES.hpp  crypto_CRC32.cpp  crypto_CRC32.hpp  crypto_RSA.cpp  crypto_RSA.hpp
lib/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.hpp
lib/math/: CMakeLists.txt  constant.hpp  count_digits.hpp  count_digits_imp.hpp  cylinder.hpp  cylinder_imp.hpp  float.cpp  float.hpp  getGravitationalAttraction.hpp  getGravitationalAttraction_imp.hpp  getSchwarzschild.hpp  getSchwarzschild_imp.hpp  pair.cpp  pair.hpp  pair_imp.hpp  power.c  power.h  power.hpp  power_imp.hpp  prime.cpp  prime.hpp  prime_imp.hpp  random.cpp  random.hpp  sphere.hpp  sphere_imp.hpp  square_root.cpp  square_root.hpp  square_root_imp.hpp
lib/python/: CMakeLists.txt
lib/python/header/: function_binding.h
lib/python/python/: class_binding.py  function_binding.py  function_binding_c.py
lib/python/src/: class_binding.cpp  function_binding.c  function_binding.cpp
lib/std/: CMakeLists.txt  std.cpp  std.hpp
lib/string_lib/: CMakeLists.txt  parsing.cpp  parsing.hpp  string_lib.cpp  string_lib.hpp  string_lib_impl.hpp
lib/texture/: CMakeLists.txt  load_texture.cpp  load_texture.hpp  load_texturemap.cpp  load_texturemap.hpp  load_title.cpp  load_title.hpp  load_titlemap.cpp  load_titlemap.hpp  sfml_screenshot.cpp  sfml_screenshot.hpp  texture.cpp  texture.hpp
lib/thread/: CMakeLists.txt  Pool.cpp  Pool.hpp  ThreadPool.h  printer.cpp  printer.hpp
lib/time/: CMakeLists.txt
lib/time/chrono/: chrono.cpp  chrono.hpp
lib/time/date/: date.cpp  date.hpp
lib/utils/opencv/: CMakeLists.txt  opencv_utils.cpp  opencv_utils.hpp
lib/utils/opengl/: CMakeLists.txt  screen_save.c  screen_save.cpp  screen_save.h  screen_save.hpp
lib/utils/sfml/: CMakeLists.txt  screen_save.cpp  screen_save.hpp
lib/vector/: CMakeLists.txt  vector.cpp  vector.hpp  vector_avx.cpp  vector_avx.hpp  vector_imp.hpp
test/: CMakeLists.txt
test/source/benchmark/: benlib_bench.cpp
test/source/generator/: generator.cpp  generator.hpp
test/source/test/: angle_test.cpp  benlib_test.cpp  cylinder_test.cpp  float_test.cpp  getGravitationalAttraction_test.cpp  getSchwarzschild_test.cpp  gettersetter_test.cpp  keyword_test.cpp  power_test.cpp  random_test.cpp  scheduler_test.cpp  sphere_test.cpp
utils/: CMakeLists.txt
utils/opencv/: CMakeLists.txt  opencv_utils.cpp  opencv_utils.hpp
utils/opengl/: CMakeLists.txt  screen_save.c  screen_save.h
utils/sfml/: CMakeLists.txt  screen_save.hpp
(+159 files in other folders)
